cleaned tests via github copilot and corrected any errors