@@ -1,6 +1,7 @@
 package com.example.blogging_platform_api_migrated.repositories;
 
 import com.example.blogging_platform_api_migrated.BloggingPlatformApiMigratedApplicationTests;
+import com.example.blogging_platform_api_migrated.models.Post;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
@@ -10,16 +11,19 @@ import static org.junit.jupiter.api.Assertions.*;
 class PostRepositoryTest extends BloggingPlatformApiMigratedApplicationTests {
     @Test
     void testGetPostsByAttributesHappyFlow() {
-        postRepository.findByTerm("Common").forEach(System.out::println);
-        List<String> businessTags = List.copyOf(postRepository.findByTerm("Business").getFirst().getTags());
-        System.out.println(businessTags.getFirst());
+        List<Post> adviceResults = postRepository.findByTerm("Advice");
+        List<Post> youResults = postRepository.findByTerm("you");
+        List<Post> blogPostResults = postRepository.findByTerm("Blog Post");
+        List<Post> businessResults = postRepository.findByTerm("Business");
+        List<String> businessTags = List.copyOf(businessResults.get(0).getTags());
+
         assertAll(
-                () -> assertEquals(3, postRepository.findByTerm("Advice").size()),
-                () -> assertEquals(3, postRepository.findByTerm("you").size()),
-                () -> assertEquals(2, postRepository.findByTerm("Blog Post").size()),
-                () -> assertEquals(1, postRepository.findByTerm("Business").size()),
-                () -> assertTrue((businessTags.getFirst().equals("JobHunting") ||
-                        businessTags.getFirst().equals("Business")))
+                () -> assertEquals(3, adviceResults.size()),
+                () -> assertEquals(3, youResults.size()),
+                () -> assertEquals(2, blogPostResults.size()),
+                () -> assertEquals(1, businessResults.size()),
+                () -> assertTrue((businessTags.get(0).equals("JobHunting") ||
+                        businessTags.get(0).equals("Business")))
         );
     }
 }
